--- a/package.json
+++ b/package.json
@@ -1,1 +1,41 @@
-{  "name": "webpack-test",  "version": "1.0.0",  "description": "",  "main": "index.js",  "scripts": {    "clean:dist": "rimraf dist && mkdir dist",    "build:dev": "npm run clean:dist && webpack-dev-server --open --config webpack/dev.config.js --hot --inline",    "build:prod": "npm run clean:dist && webpack --config webpack/prod.config.js -p",    "prebuild": "npm run clean:dist",    "test": "echo \"Error: no test specified\" && exit 1"  },  "keywords": [],  "author": "",  "license": "ISC",  "devDependencies": {    "awesome-typescript-loader": "^3.4.1",    "babel-loader": "^7.1.2",    "clean-webpack-plugin": "^0.1.17",    "css-loader": "^0.28.7",    "extract-text-webpack-plugin": "^3.0.2",    "html-loader": "^0.5.1",    "html-webpack-plugin": "^2.30.1",    "rimraf": "^2.6.2",    "style-loader": "^0.19.0",    "tslint-loader": "^3.5.3",    "uglifyjs-webpack-plugin": "^1.1.2",    "webpack": "^3.10.0",    "webpack-dev-server": "^2.9.7",    "webpack-merge": "^4.1.1"  }}
+{
+  "name": "webpack-test",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "clean:dist": "rimraf dist && mkdir dist",
+    "build:dev": "npm run clean:dist && webpack-dev-server --open --config webpack/dev.config.ts --hot --inline",
+    "build:prod": "npm run clean:dist && webpack --config webpack/prod.config.ts -p",
+    "prebuild": "npm run clean:dist",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^8.0.58",
+    "@types/webpack": "^3.8.1",
+    "awesome-typescript-loader": "^3.4.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
+    "rimraf": "^2.6.2",
+    "style-loader": "^0.19.0",
+    "ts-loader": "^3.2.0",
+    "ts-node": "^4.0.1",
+    "tslint": "^5.8.0",
+    "tslint-loader": "^3.5.3",
+    "typescript": "^2.6.2",
+    "uglifyjs-webpack-plugin": "^1.1.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7",
+    "webpack-merge": "^4.1.1"
+  }
+}
