--- a/.babelrc
+++ b/.babelrc
@@ -1,1 +1,10 @@
-{  "presets": [    [      "env",      {        "targets": {          "browsers": [            "last 2 versions"          ]        },        "modules": false      }    ]  ]}
+{
+  "presets": [
+    [
+      "env",
+      {        
+        "modules": false
+      }
+    ]
+  ]
+}
