--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,9 @@
     [
       "env",
       {        
-        "modules": false
+        "targets": {
+          "browsers": ["last 2 versions", "ie >= 7"]
+        }
       }
     ]
   ]
