--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,13 @@
   "compileOnSave": false,
   "compilerOptions": {
     "target": "es2015",
+    "moduleResolution": "node",
     "sourceMap": true,
     "typeRoots": [
       "node_modules/@types"
-    ]
+    ],
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   },
   "include": [
     "src/**/*"
